--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "vite-project",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+		"proxy": "http://localhost:8080/users",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-  },
+	},
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
